[200908]Add source into github .

--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/test123"
+    >
 
 
 
@@ -20,11 +22,12 @@
 
     <!--    app:layout_behavior="k.c.mapcardviewdemo.app.ui.widget.AnchorSheetBehavior"-->
 
-    <include
+    <k.c.mapcardviewdemo.app.ui.widget.switchRecycler.SlideDownSwitchView
         android:id="@+id/my_bottom_view"
-        layout="@layout/partial_bottom_card"
-
-
-        />
+        app:layout_behavior="@string/bottom_sheet_behavior"
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="140dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
